--- a/bench/domcut/readme
+++ b/bench/domcut/readme
@@ -1,13 +1,21 @@
-This benchmark contains 2549 protein sequences used to test domain prediction performance by FUpred and RecCut on ESM-2 predicted contact maps. You can download the necessary contact map files with the following command:
+This benchmark contains 2549 protein sequences used to test domain prediction performance by FUpred and RecCut on ESM-2 predicted contact maps.
+
+To evaluate the predicted domains against the benchmark from FUpred and replicate the ESM-RecCut results in Table 2, you can run the following command:
+
+```
+python domain_evaluate.py --ref test.info --pred test.dom
+```
+
+To replicate the RecCut domain predictions, you can run the following command to generate the test.dom file:
+
+```
+python ../../src/make_db.py --fafile test.fasta --dbfile test
+```
+
+If you would like to replicate the FUpred predictions, you can first download the necessary contact map files with the following command:
 
 ```
 wget -r -np -nd https://omics.informatics.indiana.edu/DCTprot/CE/
 ```
 
-Or if you would like to run the pipeline for RecCut yourself, you can run the following command:
-
-```
-bash commands.sh
-```
-
-If you would like to use FUpred instead of RecCut, you can download it from their link: https://zhanggroup.org/FUpred/download/FUpred.zip and simply call their binary file with any/all of the files located in the CE directory. Note that it will take much longer to run FUpred than RecCut for similar results.
+Then download the program from their link: https://zhanggroup.org/FUpred/download/FUpred.zip and simply call their binary file with any/all of the files located in the CE directory. Note that it will take much longer to run FUpred than RecCut for similar predictions.
